# python-project-50_habr

./: ..gitignore.swp  .codeclimate.yml  .coverage  .flake8  .gitignore  Makefile  README.md  coverage.xml  diff.json  pyproject.toml  pytest.ini  requirements.txt
.github/: .codeclimate.yml
.github/workflows/: github-actions.yml  main.yml  pyci.yml
coverage/: codeclimate.json
gendiff/: .generate_diff.py.swp  __init__.py  cli.py  data_parser.py  generat_diff.py  generate_diff.py  generate_diff.py.save  main.py  parser.py  test.py
gendiff/formatters/: .as_json.py.swp  .json.py.swp  as_json.py  json.py  json_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: .generate_diff_test.py.swp  comparing_test.py  comparing_tests.py  format_value_test.py  generate_diff_invalid_results_test.py  generate_diff_test.py  parser_test.py
tests/fixtures/: .file1.json.swp  diff.yaml  diff.yml  expected_nested_diff.txt  expected_plain_diff.txt  file1.txt  file1.yml  file2.yml  file3.json  file3.yaml  file4.json  file4.yaml  file5.yml  invalid_file.json  invalid_file.yml  json_jsonyml_result.txt  json_result.txt  json_yml_result.txt  nested_result.txt  nested_yml_result.txt  plain_json_result.txt  plain_jsonyml_result.txt  plain_result.txt  result_plain.txt  stylish_json_result.txt  stylish_result.txt  stylish_same_json_result.txt  stylish_yml_json_result.txt  stylish_yml_result.txt
tests/fixtures/nested/: nested_file1.yml  nested_file2.yml
