[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The program generates differences between JSON and YAML files."
authors = ["HardDuck69 <tmu1408@gmail.com>"]
readme = "README.md"
packages = [
    {include = "gendiff"}
]


[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.cli:main --format=json"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
